projectkubernetes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: "2020-11-20T13:17:42Z"
  generation: 149
  labels:
    app: projectkubernetes
  name: projectkubernetes
  namespace: default
  resourceVersion: "373566"
  selfLink: /apis/apps/v1/namespaces/default/deployments/projectkubernetes
  uid: cb342ed7-2747-443a-946c-84ed32aa2885
spec:
  progressDeadlineSeconds: 600
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: projectkubernetes
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: projectkubernetes
    spec:
      containers:
      - image: gcr.io/plexiform-pilot-296114/kubernetes@sha256:b84b579d1a5e733ea4808fa7320994bef02aa7191e3f6a2a1a3a1acfa25c9935
        imagePullPolicy: IfNotPresent
        name: kubernetes-sha256-1
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 3
  conditions:
  - lastTransitionTime: "2020-11-20T13:17:43Z"
    lastUpdateTime: "2020-11-20T13:18:20Z"
    message: ReplicaSet "projectkubernetes-76c4d578bb" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2020-11-20T14:18:20Z"
    lastUpdateTime: "2020-11-20T14:18:20Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 149
  readyReplicas: 3
  replicas: 3
  updatedReplicas: 3
